accuknox/multi-cluster-setup-helper/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: accuknox-multi-cluster-helper-webhook
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: accuknox-multi-cluster-helper-webhook
