accuknox/multi-cluster-setup-helper/k8s/mutating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: accuknox-multi-cluster-helper-webhook
  labels:
    app: accuknox-multi-cluster-helper-webhook
    partOf: 'accuknox'
webhooks:  
- name: accuknox-multi-cluster-helper-webhook.agents.svc
  matchPolicy: Equivalent
  admissionReviewVersions: ["v1"]
  sideEffects: None
  objectSelector:
    matchLabels:
      app: accuknox-multi-cluster-helper-webhook
  namespaceSelector:
    matchExpressions:
      - key: kubernetes.io/metadata.name
        operator: In
        values: 
        - agents
  rules:
  - operations: ["CREATE", "UPDATE"]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["configmaps"]
    scope: "Namespaced"
  failurePolicy: Fail
  timeoutSeconds: 25
  clientConfig:
    # intended for demonstration purposes only and should be regarded as insecure.
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVEekNDQXZlZ0F3SUJBZ0lVVFMrUE5VTk8yd3RiTkdOWjZvbExzUTRmU2Qwd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1p6RTVNRGNHQTFVRUF3d3dZV05qZFd0dWIzZ3RiWFZzZEdrdFkyeDFjM1JsY2kxb1pXeHdaWEl0ZDJWaQphRzl2YXk1aFoyVnVkSE11YzNaak1Rc3dDUVlEVlFRR0V3SkpUakVPTUF3R0ExVUVDQXdGVTNSaGRHVXhEVEFMCkJnTlZCQWNNQkVOcGRIa3dIaGNOTWpRd09USTNNREl6T0RBMldoY05NalV3T1RJM01ESXpPREEyV2pCbk1Ua3cKTndZRFZRUUREREJoWTJOMWEyNXZlQzF0ZFd4MGFTMWpiSFZ6ZEdWeUxXaGxiSEJsY2kxM1pXSm9iMjlyTG1GbgpaVzUwY3k1emRtTX [...]
    service:
      namespace: agents
      name: accuknox-multi-cluster-helper-webhook
      path: /mutate
      port: 5000
